# qemu_builds

./: .gitignore  .gitmodules  Dockerfile  README.md  docker_usage.md
build_script/: qemu_aarch64_virt_build.py  qemu_linux_toolchains.py
build_script/py_build/: __init__.py  br2_build.py  br2_config.py  tools.py  vars.py
docs/: 从树莓派4构建理解buildroot原理.docx
intellif/buildroot/: Config.in  external.desc
intellif/buildroot/board/qemu/: post-image.sh
intellif/buildroot/board/qemu/aarch64-virt/: readme.txt
intellif/buildroot/configs/: intellif_qemu_aarch64_virt_defconfig  intellif_qemu_aarch64_virt_toolchain_defconfig  qemu_intellif_aarch64_virt_toolchain_defconfig  qemu_intellif_defconfig
intellif/buildroot/package/app_hello_world/: Config.in  app_hello_world.mk
intellif/buildroot/package/app_opencv_demo_0/: Config.in  app_opencv_demo_0.mk
intellif/buildroot/package/app_opencv_resize/: Config.in  app_opencv_resize.mk
intellif/buildroot/package/ko_hello_world/: Config.in  ko_hello_world.mk
intellif/buildroot/package/sdk_drv/: Config.in  sdk_drv.mk
intellif/buildroot/package/sdk_drv_ko/: Config.in  sdk_drv_ko.mk
intellif/buildroot/tarball/: readme.txt
intellif/source/app_hello_world/: CMakeLists.txt  main.cpp
intellif/source/app_opencv_demo_0/: CMakeLists.txt  main.cpp
intellif/source/app_opencv_resize/: CMakeLists.txt  main.cpp
intellif/source/ko_hello_world/: Makefile  hello.c
intellif/source/ko_hello_world/k1/: Makefile  hello_1.c
intellif/source/ko_hello_world/k2/: Makefile  hello_2.c
intellif/source/sdk_drv/: CMakeLists.txt
intellif/source/sdk_drv/app/: CMakeLists.txt  app.cpp
intellif/source/sdk_drv/include/: Version.h  sdk_drv.h
intellif/source/sdk_drv/ko/: Makefile  ko.c
intellif/source/sdk_drv/lib/: CMakeLists.txt  drv.cpp
sample/: qemu_linux_build.py  qemu_linux_packages_version.py  qemu_linux_relay_build.py
tools/br2_build/: __init__.py  build.py  config.py
tools/docker/: dock_run.py
